--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -20,5 +21,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  assets:
-  - assets/flutter_01/
+assets:
+  assets/flutter_01/
